# IRC26_Maintenance_Stack

ircWS/: frames_2026-01-11_10.31.46.gv  frames_2026-01-11_11.07.36.gv
ircWS/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ircWS/install/custom_msgs/include/custom_msgs/custom_msgs/msg/: gps_details.hpp  imu_data.hpp  marker_tag.hpp  planner_status.h
ircWS/install/custom_msgs/include/custom_msgs/custom_msgs/msg/detail/: gps_details__rosidl_typesupport_fastrtps_c.h  gps_details__rosidl_typesupport_introspection_c.h  gps_details__struct.hpp  gps_details__traits.hpp  gps_details__type_support.c  gui_command__builder.hpp  gui_command__rosidl_typesupport_fastrtps_c.h  gui_command__rosidl_typesupport_introspection_cpp.hpp  gui_command__struct.h  gui_command__struct.hpp  gui_command__traits.hpp  gui_command__type_support.h  imu_data__functions.c  imu_data__rosidl_typesupport_fastrtps_cpp.hpp  imu_data__rosidl_typesupport_introspection_cpp.hpp  imu_data__struct.hpp  imu_data__type_support.cpp  imu_data__type_support.hpp  marker_tag__functions.c  marker_tag__functions.h  marker_tag__rosidl_typesupport_fastrtps_c.h  marker_tag__rosidl_typesupport_introspection_c.h  marker_tag__rosidl_typesupport_introspection_cpp.hpp  marker_tag__struct.h  marker_tag__struct.hpp  marker_tag__type_support.cpp  marker_tag__type_support.h  marker_tag__type_support.hpp  planner_status__builder.hpp  planner_status__functions.c  planner_status__rosidl_typesupport_fastrtps_c.h  planner_status__rosidl_typesupport_fastrtps_cpp.hpp  planner_status__struct.h  planner_status__struct.hpp  planner_status__traits.hpp  planner_status__type_support.c  planner_status__type_support.h  planner_status__type_support.hpp
ircWS/install/custom_msgs/local/lib/python3.10/dist-packages/custom_msgs/: _custom_msgs_s.ep.rosidl_typesupport_introspection_c.c
ircWS/install/custom_msgs/local/lib/python3.10/dist-packages/custom_msgs-0.0.1-py3.10.egg-info/: PKG-INFO  SOURCES.txt
ircWS/install/custom_msgs/local/lib/python3.10/dist-packages/custom_msgs/msg/: __init__.py  _gps_details_s.c  _gui_command.py  _imu_data.py
ircWS/install/custom_msgs/share/ament_index/resource_index/parent_prefix_path/: custom_msgs
ircWS/install/custom_msgs/share/ament_index/resource_index/rosidl_interfaces/: custom_msgs
ircWS/install/custom_msgs/share/custom_msgs/: package.sh
ircWS/install/custom_msgs/share/custom_msgs/cmake/: ament_cmake_export_dependencies-extras.cmake  custom_msgsConfig.cmake  export_custom_msgs__rosidl_generator_pyExport.cmake  rosidl_cmake-extras.cmake
ircWS/install/custom_msgs/share/custom_msgs/msg/: GuiCommand.idl  ImuData.idl
ircWS/install/gps/lib/gps/: gps_rtcm  gps_rtk
ircWS/install/gps/share/gps/: package.sh  package.xml
ircWS/install/planner/include/planner/stack/: irc_planner.hpp  shared_state.hpp  stack.hpp
ircWS/install/planner/lib/planner/: imu_conversion_node  local_obstacle_filter_node  mode_switch.py  motorcontroller
ircWS/install/planner/share/ament_index/resource_index/parent_prefix_path/: planner
ircWS/install/planner/share/planner/: package.sh
ircWS/install/planner/share/planner/launch/: testing.launch.py
ircWS/install/yolo/lib/yolo/: inference  inference_engine
ircWS/install/yolo/share/yolo/: package.sh
ircWS/log/: latest_build
ircWS/src/custom_msgs/: CMakeLists.txt
ircWS/src/esp_code_imu/esp_code_imu_bno055/: esp_code_imu_bno055.ino
ircWS/src/esp_code_imu/rm_espcde/: rm_espcde.ino
ircWS/src/ex_imu/: package.xml  setup.cfg  setup.py
ircWS/src/ex_imu/ex_imu/: imu_node.py  imu_node_rm.py  imu_quat.py
ircWS/src/gps/: setup.cfg  setup.py
ircWS/src/gps/gps/: gps_rtcm.py  gps_rtk.py
ircWS/src/planner/: CMakeLists.txt
ircWS/src/planner/include/stack/: irc_planner.hpp
ircWS/src/planner/launch/: bringup.launch.py  mapping.launch.py  rtab.launch.py  testing.launch.py
ircWS/src/planner/src/: ditch_detector.cpp  imu_conversion.cpp  irc_planner.cpp  irc_planner_node.cpp  local_obstacle_filter.cpp  main.cpp  motorcontroller.cpp  relay.cpp  relay_node.cpp  shared_state.cpp  stack.cpp
ircWS/src/yolo/: package.xml  setup.cfg  setup.py
ircWS/src/yolo/yolo/: damn.py  inference_engine.py  inference_engine_tiled.py  inference_node.py  test.py  test2.py  test3.py
